[metadata]
# replace with your username:
name = file-api-scholeer
version = 0.0.5
author = Richard Paprok
author_email = scholeer@seznam.cz
description = A small example file API package
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/scholeer/file_API
project_urls =
    Bug Tracker = https://github.com/pypa/sampleproject/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    file-api = file_api:app